tests/negative/gold/string-interpolate-test.gold
tests/negative/string-interpolate-test.toit:7:15: error: Illegal identifier
  print "foo $class"
              ^~~~~
tests/negative/string-interpolate-test.toit:6:16: error: Unexpected block
  print "foo $(: print it) bar"
               ^~~~~~~~~~
tests/negative/string-interpolate-test.toit:6:16: error: Can't have a block as interpolated entry in a string
  print "foo $(: print it) bar"
               ^~~~~~~~~~
tests/negative/string-interpolate-test.toit:10:7: error: Class 'string' does not have any method 'foo'
  str.foo
      ^~~
Compilation failed
